--- a/app/src/main/res/layout/list_cards_item.xml
+++ b/app/src/main/res/layout/list_cards_item.xml
@@ -1,11 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center_vertical"
     android:background="@color/cardview_dark_background"
     android:orientation="horizontal">
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/textView3"
         android:layout_width="50dp"
         android:layout_height="match_parent"
@@ -13,7 +14,14 @@
         android:text="1"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="24sp" />
+        android:textSize="24sp" />-->
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/cardview_shadow_start_color" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,21 +31,21 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="match_parent"
+            android:layout_width="222dp"
             android:layout_height="30dp"
-            android:text="Card name"
-            android:paddingLeft="5dp"
             android:gravity="center_vertical"
+            android:paddingLeft="5dp"
+            android:text="Card name"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="match_parent"
+            android:layout_width="222dp"
             android:layout_height="20dp"
-            android:text="Extension"
-            android:paddingLeft="5dp"
             android:gravity="center_vertical"
+            android:paddingLeft="5dp"
+            android:text="Extension"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
