--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.card.CardsFragment">
+    tools:context=".ui.card.CardsFragment"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rankingListView"
