--- a/app/src/main/res/layout/list_cards_item.xml
+++ b/app/src/main/res/layout/list_cards_item.xml
@@ -1,20 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center_vertical"
     android:background="@color/cardview_dark_background"
-    android:orientation="horizontal">
-
-   <!-- <TextView
-        android:id="@+id/textView3"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_dark_background"
-        android:text="1"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="24sp" />-->
+    android:orientation="horizontal"
+    >
 
     <ImageView
         android:id="@+id/imageView"
