--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/favorisFragment"
+        android:icon="@drawable/ic_star"
+        android:title="@string/title_favoris" />
+
+    <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
@@ -16,10 +21,10 @@
         android:icon="@drawable/ic_book"
         android:title="@string/title_card_info" />
 
-    <item
+    <!--<item
         android:id="@+id/cardsFragment"
         android:icon="@drawable/ic_list"
-        android:title="@string/title_card_fragment" />
+        android:title="@string/title_card_fragment" />-->
 
     <item
         android:id="@+id/cardSearchFragment"
