--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,19 +7,19 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/favorisFragment"
+        android:id="@+id/favorisFragment2"
         android:icon="@drawable/ic_star"
         android:title="@string/title_favoris" />
 
-    <item
+  <!--  <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_dashboard" />-->
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_book"
-        android:title="@string/title_card_info" />
+        android:title="@string/title_card_info_bottom" />
 
     <!--<item
         android:id="@+id/cardsFragment"
