--- a/app/src/main/res/layout/fragment_cardsearch.xml
+++ b/app/src/main/res/layout/fragment_cardsearch.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/white"
+        android:background="@drawable/redbutton"
         android:text="@string/pokemonButtonName" />
 
 </LinearLayout>
