--- a/app/src/main/res/layout/fragment_cardinfo.xml
+++ b/app/src/main/res/layout/fragment_cardinfo.xml
@@ -45,7 +45,7 @@
         <Button
             android:background="@drawable/redbutton"
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:text="Ajouter aux favoris" />
 
