--- a/app/src/main/res/layout/fragment_favoris.xml
+++ b/app/src/main/res/layout/fragment_favoris.xml
@@ -6,14 +6,26 @@
     tools:context=".ui.favoris.FavorisFragment"
     android:background="@color/white"
     >
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/button"
-        android:background="@drawable/redbutton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:text="@string/updateFavoris" />
+        android:background="@drawable/redbutton"
+        android:text="@string/updateFavoris"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rankingListView"
         android:layout_width="match_parent"
