Fix error color button + refresh favorites

--- a/app/src/main/res/layout/fragment_cardinfo.xml
+++ b/app/src/main/res/layout/fragment_cardinfo.xml
@@ -45,6 +45,7 @@
         <Button
             android:background="@drawable/redbutton"
             android:id="@+id/button2"
+            android:textColor="@color/black"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:text="Ajouter à la collection" />
