--- a/app/src/main/res/layout/fragment_cardinfo.xml
+++ b/app/src/main/res/layout/fragment_cardinfo.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.card_info.CardsInfoFragment"
-    android:background="@color/white"
+    android:background="#F3F2F8"
     >
 
     <TextView
@@ -17,8 +17,8 @@
         android:textSize="20sp" />
 
     <LinearLayout
-        android:layout_width="196dp"
-        android:layout_height="238dp"
+        android:layout_width="241dp"
+        android:layout_height="308dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginVertical="15dp"
         android:orientation="horizontal">
@@ -43,12 +43,13 @@
             android:layout_weight="1" />
 
         <Button
-            android:background="@drawable/redbutton"
             android:id="@+id/button2"
-            android:textColor="@color/black"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:text="Ajouter à la collection" />
+            android:background="@drawable/button_selector"
+            android:textStyle="bold"
+            android:text="Ajouter à la collection"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView3"
