--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.card.CardsFragment"
-    android:background="@color/white"
+    android:background="#F3F2F8"
     >
 
     <androidx.recyclerview.widget.RecyclerView
