--- a/app/src/main/res/layout/fragment_favoris.xml
+++ b/app/src/main/res/layout/fragment_favoris.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.favoris.FavorisFragment"
-    android:background="@color/white"
+    android:background="#F3F2F8"
     >
 
     <TextView
@@ -17,9 +17,10 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/redbutton"
+        android:background="@drawable/button_selector"
+        android:textStyle="bold"
         android:text="@string/updateFavoris"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView"
