--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.graph.GraphFragment"
-    android:background="@color/white"
+    android:background="#F3F2F8"
     >
 
     <TextView
@@ -42,8 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/favorisbutton"
-        android:textColor="@color/white"
-        android:background="@drawable/redbutton"
+        android:textColor="@color/black"
+        android:background="@drawable/button_selector"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
