--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#A43131</color>
+    <color name="red2">#FF0000</color>
     <color name="pink">#DF9191</color>
     <color name="blue">#FFA0BCEA</color>
 
