new design graph + cards info

--- a/app/src/main/res/layout/fragment_cardinfo.xml
+++ b/app/src/main/res/layout/fragment_cardinfo.xml
@@ -99,7 +99,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:padding="5dp"
             android:text="@string/cardmarket_moyenne"
@@ -112,7 +112,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:padding="5dp"
             android:text="@string/xxx"
@@ -165,7 +165,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:text="@string/moyenne_7_jours"
             android:textStyle="bold"
@@ -178,7 +178,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:text="@string/xxx"
             android:textStyle="bold"
@@ -233,7 +233,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:text="@string/tcgmarket_bas"
             android:textStyle="bold"
@@ -246,7 +246,7 @@
             android:layout_height="40dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:background="@color/red"
+            android:background="@color/blue_logo"
             android:gravity="center_vertical"
             android:text="@string/xxx"
             android:textStyle="bold"
