--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="red2">#FF0000</color>
     <color name="pink">#DF9191</color>
     <color name="blue">#FFA0BCEA</color>
+    <color name="blue_logo">#FF7EB9C1</color>
+
 </resources>
