--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="pink">#DF9191</color>
     <color name="blue">#FFA0BCEA</color>
     <color name="blue_logo">#FF7EB9C1</color>
+    <color name="yellow_logo">#FFFDBC07</color>
 
 </resources>
