--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -12,19 +12,14 @@
     <TextView
         android:id="@+id/uppertext"
         android:layout_width="match_parent"
-        android:layout_height="103dp" />
+        android:layout_height="273dp" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/loadinganimation"
-        android:layout_width="match_parent"
-        android:layout_height="459dp"
-        android:src="@drawable/test" />
-   <!-- <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/pcp_pokebal"
-        android:layout_gravity="center_horizontal"/>-->
+        android:layout_gravity="center_horizontal"
+        android:layout_width="103dp"
+        android:layout_height="120dp"
+        android:src="@drawable/pokeball_loading" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rankingListView"
